a few checkstyle and findbugs fixes